--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ilmedova/chattle",
+    "name": "farhansheikhmm/chattle",
     "description": "This is a laravel library package for simple realization of customer support chatting",
     "type": "library",
     "homepage": "https://github.com/ilmedova/chattle",
